<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin = "15dp"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etUsername"
            android:inputType="textPersonName"
            android:hint="@string/username"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etName"
            android:inputType="textPersonName"
            android:hint="@string/name"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/lakilaki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lakilaki"
            android:padding="20dp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/perempuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perempuan"
            android:onClick="onRadioButtonClicked"
            android:padding="20dp"/>
    </RadioGroup>
    <TextView
        android:id="@+id/tvAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Umur" />

    <Spinner
        android:id="@+id/spinnerAge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TFpass1"
            android:inputType="textPassword"
            android:hint="Kata Sandi"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TFpass2"
            android:inputType="textPassword"
            android:hint="Konfirmasi Kata Sandi"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/Bsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSignUpClick"
        android:text="@string/signup"
        android:layout_marginTop="1dp"
        android:background="@drawable/button"
        />
</LinearLayout>
