<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragmentukur"
    android:layout_height="match_parent"
    android:layout_margin = "15dp"
    tools:context="clintonelian.hemocare2.modules.main.ukur.UkurFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:id="@+id/linearLayout1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/petunjuk"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="27dp" />

    <Space android:layout_width="match_parent"
        android:layout_height="20dp"/>

        <TextView
            android:id="@+id/data_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="00.0"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="gr/dL"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />
    <Space android:layout_width="match_parent"
        android:layout_height="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3">

        <Button
            android:id="@+id/btStart1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
             
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/centerShim"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btStart2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/centerShim"
                android:text="mulai"

                />

            <Button
                android:id="@+id/btSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/centerShim"
                android:text="simpan"

                />
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/linearLayout3"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/connection_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnected"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/state_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/connect"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btPair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pair"
            
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
